<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DayOff</string>

    <!-- Menu Strings -->
    <string name="action_contacts">Contacts</string>
    <string name="action_messages">Messages</string>
    <string name="action_settings">Settings</string>

    <!-- Button Strings -->
    <string name="vacation">Vacation</string>
    <string name="late">Late</string>
    <string name="sick">Sick</string>
    <string name="btn_add_contact">Add Contact</string>
    <string name="btn_done">Done</string>

    <!-- Activity Names -->
    <string name="title_activity_main"></string>
    <string name="title_activity_message"></string>
    <string name="title_activity_contact"></string>
    <string name="title_activity_onboarding"></string>

    <!-- Toasts -->
    <string name="send_vacation_success">Message sent. Enjoy your day off.</string>
    <string name="send_late_success">Message sent. Now hurry up!</string>
    <string name="send_sick_success">Message sent. Feel better.</string>

    <!-- Contact Onboarding -->
    <string name="contact_onboarding_title">Who You Gonna Text?</string>
    <string name="contact_onboarding_intro">You need the day off. Who needs to know? Select from your contacts and when the time comes, click a button and go right back to bed.</string>
    <string name="contact_onboarding_button">Next</string>

    <!-- Contact Activity -->
    <string name="empty_contacts">Add a contact to get started.</string>

    <!-- Message Onboarding -->
    <string name="message_onboarding_title">Messages</string>
    <string name="message_onboarding_intro">Click to edit or, if these are cool, hit done</string>

    <!-- SMS Prompts -->
    <string name="sms_prompt_vacation">Taking the day off?</string>
    <string name="sms_prompt_late">Running late?</string>
    <string name="sms_prompt_sick">Feeling under the weather?</string>

</resources>
