<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/other_blue"
    android:orientation="vertical"
    tools:context="com.joshboles.dayoff.OnboardingActivity$MessageOnboardFragment">

    <ImageView
        android:layout_width="@dimen/onboarding_icon"
        android:layout_height="@dimen/onboarding_icon"
        android:src="@drawable/vacation"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:text="@string/message_onboarding_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/message_onboarding_intro"/>

    <ImageView
        android:src="@drawable/vacation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_vacation"
        android:layout_marginTop="@dimen/message_margin_top"
        android:layout_marginBottom="@dimen/message_margin_bottom"
        android:paddingLeft="@dimen/message_padding_side"
        android:paddingRight="@dimen/message_padding_side"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <ImageView
        android:src="@drawable/late_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_late"
        android:layout_marginTop="@dimen/message_margin_top"
        android:layout_marginBottom="@dimen/message_margin_bottom"
        android:paddingLeft="@dimen/message_padding_side"
        android:paddingRight="@dimen/message_padding_side"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <ImageView
        android:src="@drawable/sick_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/tv_sick"
        android:layout_marginTop="@dimen/message_margin_top"
        android:layout_marginBottom="@dimen/message_margin_bottom"
        android:paddingLeft="@dimen/message_padding_side"
        android:paddingRight="@dimen/message_padding_side"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/message_onboard_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColor="#ecf0f1"
        android:text="@string/btn_done"/>

</LinearLayout>
